0.5.8
- dclab add fluorescence channels: peak area, peak position, number of peaks
- dclab add position along channel axis from img
- dclab (0.1.6.dev2): Allow to disable KDE computation
- Allow to change order of plots (#51)
- Implement indexing of events (#49)
- Allow to show excluded events in scatter plot (#52)
- Bugfixes:
  - Settings panel not redrawn in Ubuntu (#66)
  - Order of plots not reproduced from session (#51)
  - OpenCV version 2 vs 3 changes (#45)
0.5.7
- Bugfixes:
  - Filtering: Plot selection resets to last item unexpectedly
  - User-defined titles were not saved in session
  - Remove ghost images of cells (#18)
  - dclab (0.1.5.dev13): Correct determination of video file
  - dclab (0.1.5.dev14): Multivariate KDE did not work
  - dclab (0.1.5.dev15): "Contour Fix Scale" did not work for Defo
0.5.6
- Add menu option for data export (#22)
- Add shortcut SHIFT+ENTER for "Apply" controls (#48)
- Bugfixes:
  - Define "Video Frame Offset" parameter to correctly index frames (#46)
0.5.5
- Bugfixes:
  - String formatter did not work (#40)
  - Regression in dclab<0.1.5 (#43)
0.5.4
- Changes in dclab:
  - Support for 3-channel fluorescence data (add corrections 21:42)
  - Fix behaviour with empty columns (#1 dclab)
0.5.3
- Fixes in dclab:
  - Use correct lateral position (from channel walls) (#37) 
  - Compute aspect ratio according to elongation along flow (#38)
- Allow to change thickness of contour lines (#34)
- Display number of events in statistics tab (#35)
- Improve visual representation in statistics tab
0.5.2
- Bugfix: PDF export did not work (#33)
- Fix disappearance of scrollbars upon hitting apply in controls
0.5.1
- New logo (#25)
- Bugfix: Analysis tab reset button (#30)
- Display correct axis names in Plotting tab
- Fix appveyor build script with pinning and downgrades
0.5.0
- Include full R installation with lme4 package in Windows installer
- Added Analysis tab for application of linear mixed-effects models (#15)