@@ -7,6 +7,7 @@ from __future__ import division, print_function
 
 import chaco.tools.api as cta
 import enable.api as ea
+import numpy as np
 import platform
 import wx
 
@@ -49,7 +50,8 @@ class LineDrawerWindow(wx.Frame):
     """
     def __init__(self, parent, callback, *args, **kwargs):
         self.callback = callback
-
+        self.parent = parent
+        
         wx.Frame.__init__(self, parent, *args, **kwargs)
         self.SetMinSize((700,700))
         panel = wx.Panel(self)
@@ -90,12 +92,25 @@ class LineDrawerWindow(wx.Frame):
         self.Show(True)
 
     def show_scatter(self, measurement, xax="Area", yax="Defo"):
+        self.mm = measurement
         aplot = self._create_plot_component(measurement, xax=xax, yax=yax)
         aplot.padding = 50
         aplot.padding_left= 100
         self.plot_window.bgcolor = "white"
         self.plot_window.component = aplot
         self.plot_window.redraw()
+        
+        # Index all events and allow to hover above them to see the images
+        self.event_indices = []
+        my_plot = aplot.plots["my_plot"][0]
+        # Set up the trait handler for the selection
+        id_ds = my_plot.index
+
+        id_ds.on_trait_change(self.on_mouse_scatter,
+                              "metadata_changed")
+        self.event_indices.append(id_ds)
+        self.myplot = aplot
+
 
     def _create_plot_component(self, measurement, xax, yax):
         # Create some data
@@ -113,3 +128,33 @@ class LineDrawerWindow(wx.Frame):
         plot.overlays.append(zoom)
         plot.overlays.append(LineDrawer(self.callback, (xax, yax), plot))
         return plot
+
+
+    def on_mouse_scatter(self):
+        """
+        Display an image of the event whenever the mouse hovers above an event.
+        
+        This method is a slightly simpler implementation of
+        ``plot.MainPlotArea.OnMouseScatter``
+        """
+        thishov = None
+        for id_ds in self.event_indices:
+            hov = id_ds.metadata.get("hover", [])
+            # Get hover data
+            if len(hov) > 0:
+                thishov = hov[0]
+
+        if thishov is not None:
+            # Get the cell and plot it
+            dataset = self.mm
+            # these are all cells that were plotted
+            plotfilterid = np.where(dataset._plot_filter)[0]
+            # this is the plot selection
+            plot_sel = plotfilterid[thishov]
+            # these are all the filtered cells
+            filterid = np.where(dataset._filter)[0]
+            actual_sel = filterid[plot_sel]
+            
+            mm_id = self.parent.frame.ImageArea.analysis.measurements.index(dataset)
+            self.parent.frame.ImageArea.ShowEvent(mm_id=mm_id, evt_id=actual_sel)
+
